infra/k8s/next-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: next-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-client
  template:
    metadata:
      labels:
        app: next-client
    spec:
      containers:
        - name: auth
          #image: us.gcr.io/ticketing-shop-dev/auth
          image: djolest/next-client
          imagePullPolicy: IfNotPresent
---

#Cluster IP service

apiVersion: v1 
kind: Service
metadata:
  name: next-client-service
spec:
  selector:
    app: next-client
  ports:
    - name: next-client
      protocol: TCP
      port: 3000
      targetPort: 3000
