infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          #image: us.gcr.io/ticketing-shop-dev/auth
          image: djolest/orders
---

#Cluster IP service

apiVersion: v1 
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 4000
      targetPort: 4000
