infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels: 
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          imagePullPolicy: IfNotPresent

---

apiVersion: v1 
kind: Service
metadata:
  name: orders-mongo-service
spec: 
  selector:
    app: orders-mongo
  ports:
    - name: db
      protocol: TCP
      targetPort: 27017
      port: 27017
