infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments 
    spec:
      containers:
        - name: payments 
          image: djolestojanovic/payments
---

#Cluster IP service

apiVersion: v1 
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments 
  ports:
    - name: payments
      protocol: TCP 
      port: 4000
      targetPort: 4000
