infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: payments-mongo-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo 
  template:
    metadata:
      labels:
        app: payments-mongo 
    spec:
      containers:
        - name: payments-mongo
          image: mongo 
          imagePullPolicy: IfNotPresent
  
---

apiVersion: v1 
kind: Service
metadata:
  name: payments-mongo-service
spec:
  selector:
    app: payments-mongo 
  ports: 
    - name: db
      protocol: TCP 
      targetPort: 27017
      port: 27017
