infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          #image: us.gcr.io/ticketing-shop-dev/auth
          image: djolestojanovic/tickets
---

#Cluster IP service

apiVersion: v1 
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 4000
      targetPort: 4000
